# cook-with-rust

cli/: Cargo.toml
cook-markdown/: Cargo.toml
cook-markdown/src/: lib.rs
