[package]
name = "cook-markdown"
version = "0.0.3"
license = "MIT"
edition = "2018"
description = "A CookLang to Markdown transpiling library."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fraction = {version = "0.12.1"}
#, features = ["serde", "with-serde-support"]}
cook-with-rust-parser = {path = "../parser" , version = "0.0.5"}

[features]
wasm = ["cook-with-rust-parser/wasm"]